# opengl_render_model

./: .gitignore  CMakeLists.txt  README.md  main.cpp
shader_program/: shader.fs  shader.vs
